[gd_scene load_steps=21 format=3 uid="uid://js013wnu2hci"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_w0lc6"]
[ext_resource type="Texture2D" uid="uid://cm2pebd7hjgts" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="3_31u8s"]
[ext_resource type="Texture2D" uid="uid://bfl0nawrd2oqp" path="res://addons/Tiny Swords/UI/Banners/Banner_Vertical.png" id="4_dacvg"]
[ext_resource type="Texture2D" uid="uid://chc3qx3hgpae0" path="res://addons/Tiny Swords/UI/Buttons/Button_Blue.png" id="5_b5pk4"]
[ext_resource type="Texture2D" uid="uid://dq8frci2nfyr7" path="res://addons/Tiny Swords/UI/Buttons/Button_Hover.png" id="6_r7heg"]
[ext_resource type="Texture2D" uid="uid://divxeb51qhg7b" path="res://addons/Tiny Swords/UI/Buttons/Button_Blue_Pressed.png" id="7_r12h5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v4uvj"]
texture = ExtResource("3_31u8s")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_3s7pv"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_cw5ew"]
line_spacing = 20.0
font = SubResource("SystemFont_3s7pv")
font_size = 34
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mlitl"]
texture = ExtResource("4_dacvg")
texture_margin_left = 32.0
texture_margin_top = 96.0
texture_margin_right = 32.0
texture_margin_bottom = 96.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 1
region_rect = Rect2(32, 32, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_yq1t5"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ocjc"]
texture = ExtResource("5_b5pk4")
texture_margin_left = 16.0
texture_margin_top = 8.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0
modulate_color = Color(0.552758, 0.706428, 0.739645, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_px4pg"]
texture = ExtResource("6_r7heg")
texture_margin_left = 16.0
texture_margin_top = 8.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0
region_rect = Rect2(0, 0, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_whrpc"]
texture = ExtResource("7_r12h5")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aan14"]
texture = ExtResource("6_r7heg")
texture_margin_left = 16.0
texture_margin_top = 8.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0
region_rect = Rect2(0, 0, 64, 64)

[sub_resource type="SystemFont" id="SystemFont_r1god"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t3hop"]
texture = ExtResource("5_b5pk4")
texture_margin_left = 16.0
texture_margin_top = 8.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0
modulate_color = Color(0.552941, 0.705882, 0.741176, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g3ylt"]
texture = ExtResource("6_r7heg")
texture_margin_left = 16.0
texture_margin_top = 8.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0
region_rect = Rect2(0, 0, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ivg6o"]
texture = ExtResource("7_r12h5")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2urls"]
texture = ExtResource("6_r7heg")
texture_margin_left = 16.0
texture_margin_top = 8.0
texture_margin_right = 16.0
texture_margin_bottom = 24.0
region_rect = Rect2(0, 0, 64, 64)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_w0lc6")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.337255)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -283.5
offset_right = 139.0
offset_bottom = -190.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v4uvj")

[node name="PauseLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -21.5
offset_right = 46.0
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
text = "PAUSE"
label_settings = SubResource("LabelSettings_cw5ew")

[node name="BottonPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.5
offset_top = -166.5
offset_right = 198.5
offset_bottom = 242.502
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_mlitl")

[node name="VBoxContainer" type="VBoxContainer" parent="BottonPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -58.0
offset_right = 160.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="Statistics" type="Button" parent="BottonPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -172.001
offset_right = 125.0
offset_bottom = -102.001
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../GridContainer2/Resume")
focus_neighbor_bottom = NodePath("../Options")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_yq1t5")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_2ocjc")
theme_override_styles/hover = SubResource("StyleBoxTexture_px4pg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_whrpc")
theme_override_styles/focus = SubResource("StyleBoxTexture_aan14")
text = "STATISTICS
"

[node name="Options" type="Button" parent="BottonPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -95.001
offset_right = 125.0
offset_bottom = -25.001
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Statistics")
focus_neighbor_bottom = NodePath("../Achievements")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_yq1t5")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_2ocjc")
theme_override_styles/hover = SubResource("StyleBoxTexture_px4pg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_whrpc")
theme_override_styles/focus = SubResource("StyleBoxTexture_aan14")
text = "OPTIONS"

[node name="Achievements" type="Button" parent="BottonPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -18.001
offset_right = 125.0
offset_bottom = 51.999
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../GridContainer2/Resume")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_yq1t5")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_2ocjc")
theme_override_styles/hover = SubResource("StyleBoxTexture_px4pg")
theme_override_styles/pressed = SubResource("StyleBoxTexture_whrpc")
theme_override_styles/focus = SubResource("StyleBoxTexture_aan14")
text = "ACHIEVEMENTS"

[node name="GridContainer2" type="GridContainer" parent="BottonPanel"]
custom_minimum_size = Vector2(52, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = 102.0
offset_right = 170.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 0
columns = 2

[node name="Resume" type="Button" parent="BottonPanel/GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 55)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../Quit")
focus_neighbor_top = NodePath("../../Achievements")
focus_neighbor_right = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../../Statistics")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_r1god")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_t3hop")
theme_override_styles/hover = SubResource("StyleBoxTexture_g3ylt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ivg6o")
theme_override_styles/focus = SubResource("StyleBoxTexture_2urls")
text = "RESUME"

[node name="Quit" type="Button" parent="BottonPanel/GridContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 55)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../Resume")
focus_neighbor_top = NodePath("../../Achievements")
focus_neighbor_right = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../../Statistics")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("SystemFont_r1god")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_t3hop")
theme_override_styles/hover = SubResource("StyleBoxTexture_g3ylt")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ivg6o")
theme_override_styles/focus = SubResource("StyleBoxTexture_2urls")
text = "QUIT"

[connection signal="mouse_entered" from="BottonPanel/Statistics" to="." method="_on_statistics_mouse_entered"]
[connection signal="pressed" from="BottonPanel/Statistics" to="." method="_on_statistics_pressed"]
[connection signal="mouse_entered" from="BottonPanel/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="BottonPanel/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="BottonPanel/Achievements" to="." method="_on_achievements_mouse_entered"]
[connection signal="pressed" from="BottonPanel/Achievements" to="." method="_on_achievements_pressed"]
[connection signal="mouse_entered" from="BottonPanel/GridContainer2/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="BottonPanel/GridContainer2/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="BottonPanel/GridContainer2/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="BottonPanel/GridContainer2/Quit" to="." method="_on_quit_pressed"]
